# ChangeLog for net-p2p/museek+
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/museek+/Attic/ChangeLog,v 1.9 2008/01/24 22:07:05 coldwind Exp $

  24 Jan 2008; Santiago M. Mola <coldwind@gentoo.org>
  museek+-0.1.13-r1.ebuild:
  Keyworded ~amd64 and an elog message added warning about extra software
  needed to run musetup-{gtk,qt}, #193444.

  13 Oct 2007; Santiago M. Mola <coldwind@gentoo.org>
  museek+-0.1.13-r1.ebuild:
  Depend on >=dev-util/cmake-2.4.6 (#195414).

*museek+-0.1.13-r1 (23 Sep 2007)

  23 Sep 2007; Santiago M. Mola <coldwind@gentoo.org>
  +files/museek+-0.1.13-optional-deps.patch,
  files/museek+-0.1.13-post_release_fixes.patch, -museek+-0.1.13.ebuild,
  +museek+-0.1.13-r1.ebuild:
  Make optional deps configurable.

*museek+-0.1.13 (22 Sep 2007)

  22 Sep 2007; Santiago M. Mola <coldwind@gentoo.org>
  +files/museek+-0.1.13-post_release_fixes.patch, +museek+-0.1.13.ebuild:
  Bump to 0.1.13.

  03 Jul 2007; Santiago M. Mola <coldwind@gentoo.org> metadata.xml:
  Update my maintainer data.

  14 Feb 2007; Raúl Porcel <armin76@gentoo.org>
  +files/museek+-0.1.12-musetup-gtk-spaces.patch,
  +files/museek+-0.1.12-scons-0.96.94.patch, museek+-0.1.12.ebuild:
  Add two new patches to make it work with newer scons, bug 166696, thanks to
  coldwind for the patch

  13 Feb 2007; Raúl Porcel <armin76@gentoo.org>
  +files/museek+-0.1.12-libxmlpp-dep-order.patch, +files/museek:
  add missing files, thanks to coldwind for reporting

  12 Feb 2007; Raúl Porcel <armin76@gentoo.org> metadata.xml:
  ColdWind will maintain this

*museek+-0.1.12 (12 Feb 2007)

  12 Feb 2007; Raúl Porcel <armin76@gentoo.org> +metadata.xml,
  +museek+-0.1.12.ebuild:
  New ebuild, from bug 140047, thanks to Santiago M. Mola Velasco <cooldwind
  at gmail dot com> for the ebuild
