@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/museek+
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/museek+/Attic/ChangeLog,v 1.9 2008/01/24 22:07:05 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/museek+/Attic/ChangeLog,v 1.10 2008/02/16 14:33:07 coldwind Exp $
+
+*museek+-0.1.13-r2 (16 Feb 2008)
+
+  16 Feb 2008; Santiago M. Mola <coldwind@gentoo.org>
+  +museek+-0.1.13-r2.ebuild:
+  Revbump fixing #210364
 
   24 Jan 2008; Santiago M. Mola <coldwind@gentoo.org>
   museek+-0.1.13-r1.ebuild:
